--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
@@ -7,7 +7,17 @@
     "start": "react-native start"
   },
   "dependencies": {
+    "@expo-google-fonts/mulish": "^0.2.0",
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-navigation/bottom-tabs": "^6.0.5",
+    "@react-navigation/core": "^6.0.1",
+    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/stack": "^6.0.7",
+    "axios": "^0.21.4",
     "expo": "~42.0.1",
+    "expo-app-loading": "^1.1.2",
+    "expo-apple-authentication": "~3.2.1",
+    "expo-google-app-auth": "^8.2.2",
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.8.1",
@@ -16,12 +26,23 @@
     "react-native": "~0.63.4",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-reanimated": "~2.2.0",
+    "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
+    "react-native-svg": "12.1.1",
     "react-native-unimodules": "~0.14.5",
-    "react-native-web": "~0.13.12"
+    "react-native-vector-icons": "^8.1.0",
+    "react-native-web": "~0.13.12",
+    "styled-components": "^5.3.1",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.9.0",
+    "@types/react": "~16.9.35",
+    "@types/react-native": "~0.63.2",
+    "@types/styled-components": "^5.1.14",
+    "react-native-svg-transformer": "^0.14.3",
+    "typescript": "~4.0.0"
   },
   "private": true
 }
