--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
     "axios": "^0.21.4",
+    "date-fns": "^2.23.0",
     "expo": "~42.0.1",
     "expo-app-loading": "^1.1.2",
     "expo-apple-authentication": "~3.2.1",
